# OSeer

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: scenarios.py  smoke.py  verify_live.py
skills/predict/: SKILL.md
src/oseer/: __init__.py  config.py  environment.py  parsing.py  predict.py  safety.py  schemas.py  server.py
src/oseer/prompts/: mcp_domain.py  terminal.py
src/oseer/providers/: base.py  friendli.py
tests/: test_environment.py  test_parsing.py  test_predict_integration.py  test_prompts.py  test_provider.py  test_safety.py
