[project]
name = "oseer"
version = "0.1.0"
description = "OSeer — an MCP server that predicts terminal command results before they run, using the Qwen-AgentWorld world model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OSeer" }]
keywords = ["mcp", "terminal", "world-model", "qwen", "agent", "safety"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
oseer = "oseer.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oseer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
